contrast issue

--- a/lesson03/styles/site-plan.css
+++ b/lesson03/styles/site-plan.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Raleway', sans-serif;
     line-height: 1.6;
     color: #353535;
-    background-color: #E4EBFB;
+    background-color: #353535;
     padding: 20px;
 }
 
